# iot_ruststack_demo

./: .gitignore  README.md
backend/: .env  Cargo.toml  Rocket.toml
backend/migrations/2022-05-11-132652_create_posts/: up.sql
backend/migrations/2022-07-30-164533_create_posts/: up.sql
backend/src/: main.rs  models.rs  schema.rs
embedded/.cargo/: config
embedded/src/: main.rs  secrets.rs
frontend/: Cargo.toml  index.html  notes
frontend/public/: main.css
frontend/src/: main.rs
src-tauri/: tauri.conf.json
