[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres"]}
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["diesel_postgres_pool"]}
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
