[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19.3"
reqwasm = "0.5.0"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen-futures = "0.4.31"
